# distributed-programming-ex

./: .clang-format  .earthlyignore  Dockerfile  Earthfile  README.md  bib.satyh  packages.yaml
.github/workflows/: Docker.yml  Test.yml
distfs/: .gitignore  Cargo.toml  Earthfile  build.rs  distfs.saty  rust-toolchain
distfs/mnt/: main.rs
distfs/protos/: fs.proto
distfs/src/: client.rs  lib.rs  main.rs  mux.rs  server.rs  type_conv.rs
intro/: Dockerfile  client.c  docker-compose.yaml  intro.c  meson.build  server.c  types.h
ip-sd/: Cargo.toml
ip-sd/src/: main.rs
mochi-intro/: .gitignore  Makefile  README.md  ci.sh  client.c  meson.build  server.c  types.h
raft/: .gitignore  Cargo.toml
raft/protos/: raft.proto
raft/src/: lib.rs  main.rs  server.rs
raft2/: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  raft.saty
raft2/src/: lib.rs  main.rs
ring/: main.c  meson.build  ring.c
ring-rs/: Cargo.toml  build.rs  ring.saty
ring-rs/proto/: ring.proto
ring-rs/src/: main.rs
