[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
prost-types = "0.11.6"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros", "net"] }
tonic = "0.8.3"
tonic-health = "0.8.0"
tonic-reflection = "0.6.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.8.4"
