[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
async-recursion = "1.0.2"
async-trait = "0.1.64"
clap = { version = "4.1.4", features = ["derive"] }
futures = {version="0.3.26", default-features=false}
humantime = "2.1.0"
itertools = "0.10.5"
maplit = "1.0.2"
prost = "0.11.6"
prost-types = "0.11.6"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros", "net", "fs"] }
tonic = {version="0.8.3", default-features=false, features=["transport"]}
tonic-health = "0.8.0"
tonic-reflection = "0.6.0"
tracing = { version = "0.1.37", features = ["valuable"] }
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4"] }
valuable = { version = "0.1.0", features = ["valuable-derive", "derive"] }

[build-dependencies]
tonic-build = "0.8.4"
