[package]
name = "ring-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
clap = {version="4.0.17", features=["derive"]}
prost = "0.11.0"
tokio = {version="1.21.2", features=["rt-multi-thread", "macros", "signal"]}
tonic = "0.8.2"
tonic-health = "0.7.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
tonic-build = "0.8.2"
